--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,7 @@
 include:
+#  - board: seeeduino_xiao_ble
+#    shield: TD34_left
+#  - board: seeeduino_xiao_ble
+#    shield: TD34_right
   - board: seeeduino_xiao_ble
-    shield: TD34_left
-  - board: seeeduino_xiao_ble
-    shield: TD34_right
+    shield: 1key
