test if uppercase name is the problem

--- a/config/boards/shields/TD34/TD34.yaml
+++ b/config/boards/shields/TD34/TD34.yaml
@@ -1,10 +1,10 @@
 file_format: "1"
-id: TD34
+id: td34
 name: TrongDong34
 type: shield
 requires: [seeed_xiao]
 features:
   - keys
 siblings:
-  - TD34_left
-  - TD34_right
+  - td34_left
+  - td34_right
