--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,6 @@
 include:
-  # - board: seeeduino_xiao_ble
-  #   shield: td34_left
+  - board: seeeduino_xiao_ble
+    shield: td34_left
   # - board: seeeduino_xiao_ble
   #   shield: td34_right
   #  - board: seeeduino_xiao_ble
@@ -9,5 +9,3 @@ include:
   #   shield: 2keys_left
   # - board: seeeduino_xiao_ble
   #   shield: 2keys_right
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
