try to make it ez for online keymap app

--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,6 @@
 include:
-  - board: seeeduino_xiao_ble
-    shield: td34_left
+  # - board: seeeduino_xiao_ble
+  #   shield: td34_left
   # - board: seeeduino_xiao_ble
   #   shield: td34_right
   #  - board: seeeduino_xiao_ble
