--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,8 @@
 include:
-  # - board: seeeduino_xiao_ble
-  #   shield: td34_left
-  # - board: seeeduino_xiao_ble
-  #   shield: td34_right
+  - board: seeeduino_xiao_ble
+    shield: td34_left
+  - board: seeeduino_xiao_ble
+    shield: td34_right
   #  - board: seeeduino_xiao_ble
   #    shield: 1key
   # - board: seeeduino_xiao_ble
