--- a/build.yaml
+++ b/build.yaml
@@ -1,9 +1,7 @@
 include:
-   - board: seeeduino_xiao_ble
-     shield: td34_left
-    - board: seeeduino_xiao_ble
-    shield: td34_right
-    - board: seeeduino_xiao_ble
-      shield: reset
-  # - board: seeeduino_xiao_ble
-  #   shield: 2keys_left
+  - board: seeeduino_xiao_ble
+  - shield: td34_left
+  - board: seeeduino_xiao_ble
+  - shield: td34_right
+  - board: seeeduino_xiao_ble
+  - shield: reset
