--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 include:
   - board: seeeduino_xiao_ble
-  - shield: td34_left
+    shield: td34_left
   - board: seeeduino_xiao_ble
-  - shield: td34_right
+    shield: td34_right
   - board: seeeduino_xiao_ble
-  - shield: reset
+    shield: reset
