--- a/build.yaml
+++ b/build.yaml
@@ -2,6 +2,4 @@ include:
   - board: seeeduino_xiao_ble
     shield: td34_left
   - board: seeeduino_xiao_ble
-    shield: td34_right
-  - board: seeeduino_xiao_ble
-    shield: reset
+    shield: 1key
