--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,3 @@
 include:
   - board: seeeduino_xiao_ble
-    shield: td34_right
-  - board: seeeduino_xiao_ble
-    shield: td34_right
+    shield: td34_left  
