--- a/config/boards/shields/td34/td34.config
+++ b/config/boards/shields/td34/td34.config
@@ -1,6 +1,8 @@
 // my_awesome_split_board.conf
 
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_DISPLAY=y
+
 # Request short connection intervals for low latency
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
