--- a/config/boards/shields/td34/td34.config
+++ b/config/boards/shields/td34/td34.config
@@ -2,6 +2,9 @@
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_DISPLAY=y
+CONFIG_I2C=y
+CONFIG_SSD1306=y
+CONFIG_SSD1306_REVERSE_MODE=y
 
 # Request short connection intervals for low latency
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
