--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,7 @@
 include:
-  - board: seeeduino_xiao_ble
-    shield: td34_left
-  - board: seeeduino_xiao_ble
-    shield: td34_right  
+  # - board: seeeduino_xiao_ble
+  #   shield: td34_left
+  # - board: seeeduino_xiao_ble
+  #   shield: td34_right  
+  - board: nice_nano_v2
+    shield: corne_left
