--- a/config/boards/shields/td34/td34.conf
+++ b/config/boards/shields/td34/td34.conf
@@ -3,7 +3,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # OLED config
 
-#CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Request short connection intervals for low latency
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
