--- a/build.yaml
+++ b/build.yaml
@@ -1,3 +1,5 @@
 include:
-  - board: nice_nano_v2
-    shield: corne_left
+- board: seeeduino_xiao_ble
+  shield: td34_left
+- board: seeeduino_xiao_ble
+  shield: td34_right 
