--- a/config/boards/shields/td34/td34.dtsi
+++ b/config/boards/shields/td34/td34.dtsi
@@ -4,6 +4,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zephyr,display = &oled;
     };
 
     default_transform: keymap_transform_0 {
@@ -35,4 +36,23 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4)                 RC(2,5) RC(2,6) RC(2,7) 
             ;
 
     };
+};
+&xiao_i2c {
+  status = "okay";
+
+  oled: ssd1306@3c {
+    compatible = "solomon,ssd1306fb";
+    reg = <0x3c>;
+    label = "SSD1306";
+    width = <128>;
+    height = <32>;
+    segment-offset = <0>;
+    page-offset = <0>;
+    display-offset = <0>;
+    multiplex-ratio = <31>;
+    com-invdir;
+    segment-remap;
+    com-sequential;
+    prechargep = <0x22>;
+  };
 };
