--- a/config/td34.conf
+++ b/config/td34.conf
@@ -8,3 +8,4 @@ CONFIG_ZMK_DISPLAY=y
 # Request short connection intervals for low latency
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
